Name: errors
Version: 1.2.1
Cabal-Version: >=1.14.0
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2012 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Stability: Experimental
Bug-Reports: https://github.com/Gabriel439/Haskell-Errors-Library/issues
Synopsis: Simplified error-handling
Description:
    The one-stop shop for all your error-handling needs!  Just import
    "Control.Error".
    .
    This library encourages an error-handling style that directly uses the type
    system, rather than out-of-band exceptions.
Category: Control, Error Handling
Tested-With: GHC ==7.4.1
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Errors-Library

Library
    Build-Depends: base >= 4 && < 5, either >= 3.0.1, safe, transformers
    Exposed-Modules:
        Control.Error,
        Control.Error.Script,
        Control.Error.Util,
        Control.Error.Safe,
        Data.EitherR
    GHC-Options: -O2
    Default-Language: Haskell2010
