Name: errors
Version: 1.4.2
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2012, 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Errors-Library/issues
Synopsis: Simplified error-handling
Description:
    The one-stop shop for all your error-handling needs!  Just import
    "Control.Error".
    .
    This library encourages an error-handling style that directly uses the type
    system, rather than out-of-band exceptions.
Category: Control, Error Handling
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Errors-Library

Library
    Build-Depends:
        base         >= 4     && < 5  ,
        either       >= 3.1   && < 3.5,
        safe         >= 0.3.3 && < 0.4,
        transformers >= 0.2   && < 0.4
    Exposed-Modules:
        Control.Error,
        Control.Error.Safe,
        Control.Error.Script,
        Control.Error.Util,
        Data.EitherR
    GHC-Options: -O2
