Name: errors
Version: 2.1.3
Cabal-Version: >=1.8.0.2
Build-Type: Simple
Tested-With: GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1
License: BSD3
License-File: LICENSE
Copyright: 2012, 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Errors-Library/issues
Synopsis: Simplified error-handling
Description:
    The one-stop shop for all your error-handling needs!  Just import
    "Control.Error".
    .
    This library encourages an error-handling style that directly uses the type
    system, rather than out-of-band exceptions.
Category: Control, Error Handling
extra-source-files: CHANGELOG.md
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Errors-Library

Library
    Build-Depends:
        base                >= 4     && < 5  ,
        transformers        >= 0.2   && < 0.6,
        transformers-compat >= 0.4   && < 0.6,
        unexceptionalio     >= 0.3   && < 0.4
    if impl(ghc <= 7.6.3)
        Build-Depends:
            safe            >= 0.3.3 && < 0.3.10
    else
        Build-Depends:
            safe            >= 0.3.3 && < 0.4
    Exposed-Modules:
        Control.Error,
        Control.Error.Safe,
        Control.Error.Script,
        Control.Error.Util,
        Data.EitherR
